[package]
name = "pr2codon"
version = "1.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pr2codon"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "*"
parking_lot = "*"

[profile.release]
lto = true

[profile.dev]
codegen-units = 32
lto = true
opt-level = 3
