[package]
name = "pr2codon"
version = "1.1.19"
edition = "2021"
exclude = [ "py_tests/",
            ".github/",
            ".cargo_vcs_info.json",
            ".gitignore",
            "Cargo.toml.orig",
            "requirements.txt",]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pr2codon"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
parking_lot = "0.12"

[profile.release]
lto = true
